WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147032
[Content Extensions] Term::isUniversalTransition() incorrectly expects the end-of-line assertion in character sets
https://bugs.webkit.org/show_bug.cgi?id=147032
Summary
[Content Extensions] Term::isUniversalTransition() incorrectly expects the en...
Benjamin Poulain
Reported
2015-07-16 21:34:58 PDT
[Content Extensions] Term::isUniversalTransition() incorrectly expects the end-of-line assertion in character sets
Attachments
Patch
(5.48 KB, patch)
2015-07-16 21:42 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2015-07-16 21:42:00 PDT
Created
attachment 256956
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-17 14:48:21 PDT
Comment on
attachment 256956
[details]
Patch Clearing flags on attachment: 256956 Committed
r186965
: <
http://trac.webkit.org/changeset/186965
>
WebKit Commit Bot
Comment 3
2015-07-17 14:48:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug