[Content Extensions] Term::isUniversalTransition() incorrectly expects the end-of-line assertion in character sets https://bugs.webkit.org/show_bug.cgi?id=147032

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-07-17
Reviewed by Alex Christensen.

Source/WebCore:

* contentextensions/Term.h:
(WebCore::ContentExtensions::Term::isUniversalTransition):
The universal transition is not supposed to account for the end-of-line assertion,
it should be a transition matching any character.

Here, we were counting 128 transitions, the 127 characters plus the
transition on zero we are using for EOL.

The end result is Term::isUniversalTransition() was completely useless.
The only code using it is the pattern simplificaton phase. That part
was not working correclty and was allowing useless ".*" in the patterns.

Tools:

* TestWebKitAPI/Tests/WebCore/ContentExtensions.cpp:
Test that the useless terms are eliminated by counting
the number of NFA nodes generated.

Canonical link: https://commits.webkit.org/165099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186965 268f45cc-cd09-0410-ab3c-d52691b4dbfc